--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"
                                  tr.appendChild(td9);
                                  body.appendChild(tr);
                    console.log(td9);
-                   td10.innerText=location;
+                   td10.innerText=username;
                                  tr.appendChild(td10);
                                  body.appendChild(tr);
                    console.log(td10); 
